--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "ejs": "^3.1.10",
+    "nestjs-form-data": "^1.9.93",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
