--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.1",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "6.5.0",
     "archiver": "^7.0.1",
     "argon2": "^0.41.1",
